css/responsive.css
/*tablet first*/
@media only screen and (max-width: 768px) {

    .container {
        width: 100%;
    }

    img {
        max-width: 100%;
    }
    .col-right ul {
        font-size: 15px;
    }
  }
/*mobile*/
  @media only screen and (max-width: 576px) {
        .row {
            flex-wrap: wrap;
            gap: 30px;
        }
        .col {
            font-size: 22px;
            flex-basis: 100%;
        }
  
  }

